--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:h2:mem:jpa_jbd
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
