--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# H2 properties
+#H2.properties
 spring.datasource.url=jdbc:h2:mem:jpa_jbd
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
